<!-- res/menu/nav_menu.xml -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_teams"
            android:icon="@drawable/ic_teams"
            android:title="@string/menu_teams"/>
        <item
            android:id="@+id/nav_recent_matches"
            android:icon="@drawable/ic_recent_matches"
            android:title="@string/menu_recent_matches"/>
        <item
            android:id="@+id/nav_upcoming_matches"
            android:icon="@drawable/ic_upcoming_matches"
            android:title="@string/menu_upcoming_matches"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile"/>
    </group>
    <item android:title="@string/menu_actions">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_logout"/>
        </menu>
    </item>
</menu>